--- a/osgi-gradle/build.gradle
+++ b/osgi-gradle/build.gradle
@@ -52,7 +52,7 @@ dependencies {
   testImplementation 'org.ops4j.pax.exam:pax-exam-link-mvn:4.14.0'
 }
 
-// adding a test sourceSet for integrationTest :: Jvm Test Suite
+// === Adding a test sourceSet for integrationTest :: Jvm Test Suite ===
 // note: running after jar due these OSGI tests requirements
 // https://docs.gradle.org/current/userguide/jvm_test_suite_plugin.html
 testing {
@@ -84,7 +84,7 @@ testing {
 
 check.dependsOn integrationTest
 
-// OSGI jar bundle configuration
+// === OSGI jar bundle configuration ===
 // disable Spring's registered bootJar
 bootJar {
   enabled = false
